Update down arrow

--- a/index.html
+++ b/index.html
@@ -129,7 +129,9 @@
                 >
               </div>
 
-              <span class="material-symbols-outlined"> expand_more </span>
+              <span style="margin-left: 5px; margin-top: 1px"
+                ><i class="fa-solid fa-angle-down"></i
+              ></span>
             </div>
             <div class="cart_a">
               <a class="cart" href="#"
@@ -199,7 +201,7 @@
             </div>
             <div class="cat_name">
               Fashion
-              <span class="material-symbols-outlined"> expand_more </span>
+              <span><i class="fa-solid fa-angle-down"></i></span>
             </div>
           </div>
           <div class="cat_items">
@@ -213,7 +215,7 @@
             </div>
             <div class="cat_name">
               Electronics
-              <span class="material-symbols-outlined"> expand_more </span>
+              <span><i class="fa-solid fa-angle-down"></i></span>
             </div>
           </div>
           <div class="cat_items">
@@ -226,7 +228,7 @@
               />
             </div>
             <div class="cat_name">
-              Home <span class="material-symbols-outlined"> expand_more </span>
+              Home <span><i class="fa-solid fa-angle-down"></i></span>
             </div>
           </div>
           <div class="cat_items">
@@ -240,7 +242,7 @@
             </div>
             <div class="cat_name">
               Appliances
-              <span class="material-symbols-outlined"> expand_more </span>
+              <span><i class="fa-solid fa-angle-down"></i></span>
             </div>
           </div>
           <div class="cat_items">
@@ -265,7 +267,7 @@
             </div>
             <div class="cat_name">
               Beauty,Toys & More
-              <span class="material-symbols-outlined"> expand_more </span>
+              <span><i class="fa-solid fa-angle-down"></i></span>
             </div>
           </div>
         </div>
